--- a/style.css
+++ b/style.css
@@ -28,8 +28,7 @@ body{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
-	margin: 0px;
+	margin: 50px 0px;
 
 	background: var(--first);
 }
